fix overflow in cms

--- a/public/styles/cms_preview_style.css
+++ b/public/styles/cms_preview_style.css
@@ -179,7 +179,7 @@ h1 {
 }
 
 .navbar {
-  width: 100%;
+
   padding: 0 1.5rem;
   border-bottom: solid 1.5px rgba(0, 0, 0, 0.26);
 }
